# palette-ize_it

./: README.md  main.py  pyproject.toml
palette_ize_it/: app.py
palette_ize_it/templates/: base.html  footer.html  generate.html  header.html  index.html  result.html
